
The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_

UNRELEASED VERSION
------------------

Fixed
~~~~~

- Functions with an async parameter had them renamed to asynchronous as async
  is a keyword as of Python 3.7
- Fix a bug in the XSD parsing when an XSD contains a schema-level simpleType

0.3.10 - 2018-08-31
-------------------

Added
~~~~~

- The experiment.create_resource and scan.create_resource now take two extra
  arguments: data_dir and method, which allow the uploading of the content of
  a directory as the content of the newly created resource. The method is the
  method for resource.upload_dir method
- Command line callable scripts that copies an entire project to another xnat.
  See ``xnat_cp_project --help``

Changed
~~~~~~~

- Removed wrong default argument for create_assessor (invalid assessor type)
- The lower level get/put/post/delete methods now can process full uris as well
  as paths as long as the uri start matches the server uri (e.g. instead of
  using /data/projects you can also give https://serveruri.com/data/projects.

Fixed
~~~~~

- Fixed a small bug where an incorrect error message was giving when not giving
  a value for the secondary label during object creation.

0.3.9 - 2018-07-02
------------------

Fixed
~~~~~

- xnatpy had issues with shared subjects and sessions as the REST API would
  return the original object (with sharing information in it). Now xnatpy
  check the requested uri and makes sure the information of the correct project
  is used. Now shared objects can be used properly in xnatpy.

Added
~~~~~

- resource.upload now takes an ``extract`` parameter indicating data should be
  extracted into files after upload
- resource.upload_dir to upload an entire directory to a resource, the directory
  will be added into the resources so that e.g. directory/a.txt becomes resource/a.txt